--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cryptography: ^2.7.0
   cryptography_flutter: ^2.3.2
   intl: ^0.19.0
+  convert: ^3.1.1
 
 dev_dependencies:
   flutter_test:
