--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cryptography_flutter: ^2.3.2
   intl: ^0.19.0
   convert: ^3.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
