--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
   intl: ^0.19.0
   convert: ^3.1.1
   equatable: ^2.0.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.12
 
 flutter:
