--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,17 @@ description: "A new Flutter package project."
 version: 0.0.1
 
 environment:
-  sdk: '>=2.12.0 <=3.10.2'
+  sdk: '>=3.3.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cryptography: ^2.1.0
+  cryptography: ^2.7.0
   intl: ^0.19.0
   convert: ^3.1.1
   equatable: ^2.0.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
